🐛 fix view size on mobile

--- a/style.css
+++ b/style.css
@@ -17,8 +17,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
-    width: 200px;
 }
 
 .proutometer {
